修复NetUtils在未连接wifi时调用出现空指针的bug